@@ -31,8 +31,7 @@ import de.joachim.haensel.phd.scenario.vehicle.ILowerLayerControl;
 import de.joachim.haensel.phd.scenario.vehicle.ILowerLayerFactory;
 import de.joachim.haensel.phd.scenario.vehicle.control.interfacing.ITrajectoryReportListener;
 import de.joachim.haensel.phd.scenario.vehicle.control.interfacing.ITrajectoryRequestListener;
-import de.joachim.haensel.phd.scenario.vehicle.control.reactive.PurePursuitControllerVariableLookahead;
-import de.joachim.haensel.phd.scenario.vehicle.control.reactive.PurePursuitParameters;
+import de.joachim.haensel.phd.scenario.vehicle.control.reactive.purepuresuitvariable.PurePursuitControllerVariableLookahead;
 import de.joachim.haensel.phd.scenario.vehicle.experiment.TrajectoryRecorder;
 import de.joachim.haensel.phd.scenario.vehicle.navigation.TrajectoryElement;
 import de.joachim.haensel.vrepshapecreation.VRepObjectCreation;
@@ -126,6 +125,7 @@ public class TestTaskExecutor
             config.setMap(map);
             config.configSimulator(_vrep, _clientID, _objectCreator);
             config.setTargetPoints(Arrays.asList(new Position2D[]{startPoint, endPoint}));
+            config.setControlLoopRate(120);
             taskCreator.configure(config);
             List<ITask> tasks = taskCreator.createTasks();
 
@@ -270,14 +270,13 @@ public class TestTaskExecutor
             public ILowerLayerControl create()
             {
                 PurePursuitControllerVariableLookahead purePursuitControllerVariableLookahead = new PurePursuitControllerVariableLookahead();
-                purePursuitControllerVariableLookahead.setParameters(new PurePursuitParameters(lookahead, 0.0));
                 ITrajectoryRequestListener requestListener = (newTrajectories, timestamp) ->
                 {
-                    configurations.put(new Long(timestamp), newTrajectories);
+                    configurations.put(Long.valueOf(timestamp), newTrajectories);
                 };
                 purePursuitControllerVariableLookahead.addTrajectoryRequestListener(requestListener);
                 ITrajectoryReportListener reportListener = (rearWheelCP, frontWheelCP, velocity, timeStamp) -> {
-                    observations.put(new Long(timeStamp), new ObservationTuple(rearWheelCP, frontWheelCP, velocity, timeStamp));
+                    observations.put(Long.valueOf(timeStamp), new ObservationTuple(rearWheelCP, frontWheelCP, velocity, timeStamp));
                 };
                 purePursuitControllerVariableLookahead.addTrajectoryReportListener(reportListener);
                 return purePursuitControllerVariableLookahead;
@@ -310,6 +309,7 @@ public class TestTaskExecutor
             config.setMap(map);
             config.configSimulator(_vrep, _clientID, _objectCreator);
             config.setControlParams(15.0, 120.0, 3.8, 4.0, 1.0);
+            config.setControlLoopRate(120);
             config.setDebug(true);
             config.setCarModel("./res/simcarmodel/vehicleVisuals.ttm");
             config.setLowerLayerController(new ILowerLayerFactory()
@@ -318,7 +318,6 @@ public class TestTaskExecutor
                 public ILowerLayerControl create() 
                 {
                     PurePursuitControllerVariableLookahead purePursuitControllerVariableLookahead = new PurePursuitControllerVariableLookahead();
-                    purePursuitControllerVariableLookahead.setParameters(new PurePursuitParameters(15, 0.0));
                     return purePursuitControllerVariableLookahead;
                 }
             });
@@ -356,6 +355,7 @@ public class TestTaskExecutor
             config.configSimulator(_vrep, _clientID, _objectCreator);
             config.setControlParams(15.0, 120.0, 3.8, 4.0, 1.0);
             config.setDebug(true);
+            config.setControlLoopRate(120);
             config.setCarModel("./res/simcarmodel/vehicleVisuals.ttm");
             config.setLowerLayerController(new ILowerLayerFactory()
             {
@@ -363,7 +363,6 @@ public class TestTaskExecutor
                 public ILowerLayerControl create() 
                 {
                     PurePursuitControllerVariableLookahead purePursuitControllerVariableLookahead = new PurePursuitControllerVariableLookahead();
-                    purePursuitControllerVariableLookahead.setParameters(new PurePursuitParameters(15, 0.0));
                     return purePursuitControllerVariableLookahead;
                 }
             });
